# image-compression

./: .gitignore  CMakeLists.txt  README.md  TODO.md
decode/: CMakeLists.txt  decode.cpp
encode/: CMakeLists.txt  encode.cpp
huffman/: CMakeLists.txt
huffman/include/: huffman.hpp
huffman/src/: huffman.cpp
main/: CMakeLists.txt  main.cpp
packing/: CMakeLists.txt
packing/include/: packing.hpp
packing/src/: packing.cpp
